# Automated-Planning-IMV

./: .gitignore  README.md
Problem1/: domain.pddl  problem.pddl
Problem1/astar-blind/: terminal's_output.txt
Problem1/lama-first/: lama_first's_terminal_output.txt
Problem2/: domain.pddl  problem.pddl
Problem2/astar-blind/: a_start's_terminal_output.txt
Problem2/lama-first/: lama_first's_terminal_output.txt
Problem3/: domain.hddl  problem.hddl
Problem3/Panda/: panda's_terminal_output.txt
Problem4/: domain.pddl  problem.pddl
Problem4/Optic BFS (Without HillClimbing)/: Optic BFS (Without HillClimbing).txt
Problem4/Optic Greedy/: Optic Greedy.txt
Problem4/Optic Weighted A-Star/: Optic Weighted A-Star.txt
Problem4/TFD Anytime/: TFD Anytime.txt
Problem4/TFD Basic/: TFD Basic.txt
Problem5/: Problem Commands.txt  Terminal1 Output.txt  Terminal2 Output.txt
Problem5/plansys2_assignment/: CMakeLists.txt  commands.txt  package.xml
Problem5/plansys2_assignment/launch/: plansys2_assignment_launch.py
Problem5/plansys2_assignment/pddl/: domain.pddl
Problem5/plansys2_assignment/src/: cooling_node.cpp  disable_sealing_node.cpp  enable_sealing_node.cpp  load_delicate_artifact_node.cpp  load_normal_artifact_node.cpp  load_pod_node.cpp  move_drone_node.cpp  move_normal_node.cpp  move_sealing_node.cpp  unload_artifact_node.cpp  unload_pod_node.cpp
