<?xml version="1.0"?>
<package format="3">
  <name>plansys2_assignment</name>
  <version>0.0.0</version>
  <description>Problem 5 Implementation</description>
  <maintainer email="user@test.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>